// SonarQube, open source software quality management tool.
// Copyright (C) 2008-2016 SonarSource
// mailto:contact AT sonarsource DOT com
//
// SonarQube is free software; you can redistribute it and/or
// modify it under the terms of the GNU Lesser General Public
// License as published by the Free Software Foundation; either
// version 3 of the License, or (at your option) any later version.
//
// SonarQube is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
// Lesser General Public License for more details.
//
// You should have received a copy of the GNU Lesser General Public License
// along with this program; if not, write to the Free Software Foundation,
// Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.

/*
Notes

  - "required" fields are not used as recommended by Google to keep forward-compatibility:
    https://developers.google.com/protocol-buffers/docs/proto#simple

  - this is beta version of specification. It will evolve during next releases and is
    not forward-compatible yet.
*/

syntax = "proto3";

package SonarQube.Client.Models;

import "constants.proto";

option java_package = "org.sonar.scanner.protocol.input";
option optimize_for = SPEED;

message ServerIssue {
    string key = 1;
    string module_key = 2;
    string path = 3;
    string rule_repository = 4;
    string rule_key = 5;
    int32 line = 6;
    string msg = 7;
    Severity severity = 8;
    bool manual_severity = 9;
    string resolution = 10;
    string status = 11;
    string checksum = 12;
    string assignee_login = 13;
    int64 creation_date = 14;
    string type = 15;
}